--- a/DwMember/Base.lproj/Login.storyboard
+++ b/DwMember/Base.lproj/Login.storyboard
@@ -30,7 +30,7 @@
         <!--LoginViewController-->
         <scene sceneID="Zug-mP-nbj">
             <objects>
-                <viewController storyboardIdentifier="LoginViewController" title="LoginViewController" id="vHg-nZ-9Ls" customClass="LoginViewController" customModule="DwMember" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" title="LoginViewController" id="vHg-nZ-9Ls" customClass="LoginViewController" customModule="EPOT" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="eRm-DH-GVQ"/>
                         <viewControllerLayoutGuide type="bottom" id="WGq-JH-omd"/>
@@ -40,7 +40,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Lvt-V2-elA">
-                                <rect key="frame" x="36" y="114" width="303" height="340"/>
+                                <rect key="frame" x="36" y="114" width="303" height="350"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="120" placeholderIntrinsicHeight="120" image="epotlogo" translatesAutoresizingMaskIntoConstraints="NO" id="vCc-bu-xly">
                                         <rect key="frame" x="101.5" y="0.0" width="100" height="100"/>
@@ -99,9 +99,12 @@
                                         </subviews>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="303" placeholderIntrinsicHeight="40" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rqs-j1-U9f">
-                                        <rect key="frame" x="0.0" y="300" width="303" height="40"/>
+                                        <rect key="frame" x="0.0" y="300" width="303" height="50"/>
                                         <color key="backgroundColor" red="0.65818500518798828" green="0.059780292212963104" blue="0.16733807325363159" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="Zf2-T0-hlF"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <state key="normal" title="Login">
                                             <color key="titleColor" red="0.99963909390000005" green="1" blue="0.99975615740000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
